# cloudflare-webpack-wasm-template

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  webpack.config.js  wrangler.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docker/builder/: Dockerfile
src/: lib.js  lib.rs  worker.js
