[package]
name = "wasm-worker"
version = "0.1.0"
authors = ["Ronald Chan"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = "0.8"
wasm-bindgen = "0.2"
web-sys = { version = "0.3",  features = ["Request", "Response", "console"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
